<resources>
    <string name="app_name">GithubTest</string>

    <string name="account_hint">请输入手机号</string>
    <string name="register">注册账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="Mac_hint">请输入手机蓝牙Mac地址</string>
    <string name="sign_in">登&#8194;&#8194;&#8194;&#8194;&#8194;录</string>
    <string name="sign_out">退&#8194;&#8194;&#8194;&#8194;&#8194;出</string>

    <string name="home">首页</string>
    <string name="forecast">预测</string>
    <string name="upload">上报</string>
    <string name="i">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
