<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="项目名"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragment_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@+id/bottom_menu" />


    <RadioGroup
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/text_white"
        android:orientation="horizontal">

        <RadioButton
            style="@style/bottom_item"
            android:id="@+id/home_tab"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="@string/home" />

        <RadioButton
            style="@style/bottom_item"
            android:id="@+id/forecast_tab"
            android:drawableTop="@drawable/tab_menu_forecast"
            android:text="@string/forecast" />

        <RadioButton
            style="@style/bottom_item"
            android:id="@+id/upload_tab"
            android:drawableTop="@drawable/tab_menu_upload"
            android:text="@string/upload" />

        <RadioButton
            style="@style/bottom_item"
            android:id="@+id/i_tab"
            android:drawableTop="@drawable/tab_menu_i"
            android:text="@string/i" />
    </RadioGroup>

</RelativeLayout>